syntax = "proto3";
package ticketcache;

message TicketIds {
  repeated bytes TicketId = 1;
}

message NodeTicketIds {
  map<string, TicketIds> NTickets = 1;
}

message BlockNodes {
  map<string, NodeTicketIds> BNodes = 1;
}

message NumBlocks {
  map<string, BlockNodes> NBlocks = 1;
}

message SortCalcHash {
  repeated string Nodeids = 1;
  repeated TicketIds Tids = 2;
}